# dotfiles

./: .gitignore  .npmrc  .tmux.conf  README.md  config.fish  config.yml  kitty.conf  link.sh
.config/alacritty/: alacritty.toml
.config/emacs/: custom.el  early-init.el  enauczanie.el  init.el  lsp.el  modeline.el  welcome.el
.config/emacs/autoload/: enauczanie.el  git-clone.el  journal.el  lsp.el  modeline.el  rfc.el  welcome.el
.config/fish/: config.fish  fish_variables
.config/fish/functions/: fish_prompt.fish
.config/foot/: foot.ini
.config/ghostty/: config.ghostty
.config/lazygit/: config.yml
.config/nvim/: .luarc.jsonc  init.lua
.config/nvim/lua/: init-vscode.lua
.config/rofi/: config.rasi
.config/sway/: config
.config/tmux/: tmux-sessionizer.sh  tmux.conf
.config/waybar/: config.jsonc  style.css
helix/: config.toml  languages.toml
nvim/: init.lua
nvim-new/: init.lua  lazy-lock.json
nvim-new/lua/trzcin/: colorscheme.lua  keymaps.lua  options.lua
nvim-new/lua/trzcin/plugins/: debug.lua  editing.lua  git.lua  init.lua  lsp.lua  lualine-setup.lua  navigation.lua  null.lua  nvim-tree-setup.lua  ui.lua  (+3 more)
nvim/ftplugin/: java.lua
nvim/plugin/: packer_compiled.lua
scripts/: new-cpp-project  new-java-project
scripts/cpp-templates/console-app/: CMakeLists.txt  run.sh
scripts/cpp-templates/console-app/.cache/clangd/index/: main.cpp.AFB423BBC0504130.idx  main.hpp.78A8C8831628E9E5.idx
scripts/cpp-templates/console-app/include/: main.hpp
scripts/cpp-templates/console-app/src/: main.cpp
scripts/java-templates/console-app/: pom.xml
(+22 files in other folders)
